--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,30 +19,30 @@
 
 <div id="hero-image-container">
 
-    <!-- Chocelegance logo placed in hero container, will only be displayed on mobile -->
+    <!-- Chocelegance logo placed in hero container, will only be displayed on mobile, from index.html -->
     <div id="mobile-logo" class="d-block d-sm-block d-md-block d-lg-none">
         <a href="{% url 'home' %}" class="nav-link d-inline-flex">
-          <h2 class=""><strong>chocelegance</strong></h2><span class="small mobile-logo-heart">&#10084</span>
+          <h2 class=""><strong>chocelegance</strong></h2><span class="small mobile-logo-heart">&#10084;</span>
         </a>
       </div>
 
 
 
-    <!-- Hero image main text -->
+    <!-- Hero image main text, from index.html -->
     <div id="hero-image-text-heading">
         <p>
             It's time to<br><strong>treat*</strong><br>yourself!
         <p>
     </div>
 
-    <!-- Hero image sub text -->
+    <!-- Hero image sub text, from index.html -->
     <div id="hero-image-text-sub-heading">
         <p>
             <strong>*guaranteed guilt free</strong>
         </p>
     </div>
 
-    <!-- Treat yourself now button, links to all chocolates -->
+    <!-- Treat yourself now button, links to all chocolates, from index.html -->
     <div id="treat-yourself-button">
         <p>
             <a href="{% url 'chocolates' %}">Treat yourself now!</a>
