--- a/chocolates/templates/chocolates/custom_widget_templates/custom_clearable_file_input.html
+++ b/chocolates/templates/chocolates/custom_widget_templates/custom_clearable_file_input.html
@@ -1,7 +1,7 @@
 {% if widget.is_initial %}
 <p>{{ widget.initial_text }}:</p>
 <a href="{{ widget.value.url }}">
-    <img width="96" height="auto" class="rounded shadow-sm" src="{{ widget.value.url }}">
+    <img width="200" class="rounded shadow-lg border-purple" src="{{ widget.value.url }}" alt="Image of chocolate">
 </a>
 {% if not widget.required %}
 <div class="custom-control custom-checkbox mt-2">
@@ -16,6 +16,5 @@
     Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"
         {% include "django/forms/widgets/attrs.html" %}>
 </span>
-<strong>
-    <p class="text-danger" id="filename"></p>
-</strong>
+
+<p class="bright-purple-text mt-2 font-weight-bold" id="filename"><strong></strong></p>
