--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -3,20 +3,20 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav mx-auto">
 
-        <!-- Displays home link on smaller screens -->
+        <!-- Displays home link on smaller screens, from main-nav.html -->
         <li class="nav-item d-block d-lg-none">
             <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
         </li>
 
-        <!-- All Products drop down menu -->
+        <!-- All Products drop down menu, from main-nav.html -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="all-products-link"
+            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="all-chocolates-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Chocolates
             </a>
-            <div class="dropdown-menu border-purple" aria-labelledby="all-products-link">
+            <div class="dropdown-menu border-purple" aria-labelledby="all-chocolates-link">
                 <a href="{% url 'chocolates'%}?sort=choc_price&direction=asc" class="dropdown-item purple-text-transition">By
                     Price</a>
                 <a href="{% url 'chocolates'%}?sort=choc_rating&direction=desc" class="dropdown-item purple-text-transition">By
@@ -27,9 +27,9 @@
             </div>
         </li>
 
-        <!-- Keto chocolate drop down menu -->
+        <!-- Keto chocolate drop down menu, from main-nav.html -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="clothing-link" data-toggle="dropdown"
+            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="keto-chocolate-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Keto
             </a>
@@ -45,13 +45,13 @@
             </div>
         </li>
 
-        <!-- Vegan chocolate drop down menu -->
+        <!-- Vegan chocolate drop down menu, from main-nav.html -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="homeware-link" data-toggle="dropdown"
+            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="vegan-chocolate-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Vegan
             </a>
-            <div class="dropdown-menu border-purple" aria-labelledby="keto-chocolate-link">
+            <div class="dropdown-menu border-purple" aria-labelledby="vegan-chocolate-link">
                 <a href="{% url 'chocolates' %}?choc_category_display=vegan_dark_choc" class="dropdown-item purple-text-transition">Dark
                     Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=vegan_milk_choc" class="dropdown-item purple-text-transition">Milk
@@ -63,13 +63,13 @@
             </div>
         </li>
 
-        <!-- Gluten-free chocolate drop down menu -->
+        <!-- Gluten-free chocolate drop down menu, from main-nav.html -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="homeware-link" data-toggle="dropdown"
+            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="gluten-free-chocolate-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Gluten-Free
             </a>
-            <div class="dropdown-menu border-purple" aria-labelledby="keto-chocolate-link">
+            <div class="dropdown-menu border-purple" aria-labelledby="gluten-free-chocolate-link">
                 <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_dark_choc" class="dropdown-item purple-text-transition">Dark
                     Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_milk_choc" class="dropdown-item purple-text-transition">Milk
@@ -81,9 +81,9 @@
             </div>
         </li>
 
-        <!-- Special Offers drop down menu -->
+        <!-- Special Offers drop down menu, from main-nav.html -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link purple-text-transition h4" href="#" id="specials-link" data-toggle="dropdown"
+            <a class="font-weight-bold nav-link purple-text-transition h4" href="#" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 About
             </a>
