--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -45,7 +45,7 @@
     <!-- Treat yourself now button, links to all chocolates, from index.html -->
     <div id="treat-yourself-button">
         <p>
-            <a href="{% url 'chocolates' %}">Treat yourself now!</a>
+            <a href="{% url 'chocolates' %}"><strong>Treat yourself now!</strong></a>
         </p>
     </div>
 
