--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -123,7 +123,7 @@
                         </td>
 
                         <!-- Quantity -->
-                        <td id="cart-quantity-col" class="">
+                        <td class="cart-quantity-col">
 
                             <!-- The form below allows user to adjust item quantity at the cart screen -->
                             {% include "cart/quantity_form.html" %}
