--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,6 +62,7 @@ nav ul {
     margin-right: 3rem !important;
 }
 
+
 /* Styles placeholder text shown in search bar */
 input[name='q']::placeholder {
     color: #551b8c;
@@ -196,6 +197,15 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 #quantity-form-group {
     width: 17rem;
 }
+
+.border-radius-10 {
+    border-radius: 10px;
+}
+
+.border-radius-15 {
+    border-radius: 15px;
+}
+
 
 
 
@@ -426,13 +436,13 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
     border-radius: 15px;
     transition: all 0.2s ease-in-out;
     border: 1px solid #882bde;
-    box-shadow: 0 0px 15px #ed82ed;
+    box-shadow: 0px 0px 15px #ed82ed;
 }
 
 #treat-yourself-button:hover {
     background: #c71585;
     border: 1px solid #ed82ed;
-    box-shadow: 0 0px 100px #ed82ed;
+    box-shadow: 0px 0px 100px #ed82ed;
 }
 
 #treat-yourself-button a {
@@ -443,6 +453,8 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
     font-size: 1.5rem;
     color: white;
     text-decoration: none;
+    font-weight: 100;
+    text-shadow: 0px 0px 5px #ed82ed;
 }
 
 
@@ -680,7 +692,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 
 
 /* Used to create a container for the chocolate image in chocolates.html */
-#cart-quantity-col {
+.cart-quantity-col {
     width: 15rem !important;
     padding-right: 3rem !important;
 }
@@ -913,6 +925,11 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     #treat-yourself-button {
         width: 20rem;
         top: 60%;
+    }
+
+    #treat-yourself-button a {
+        font-size: 2rem !important;
+        font-weight: 100;
     }
 
     .allauth-form-inner-content {
