Adjust styling of profile.html

--- a/chocolates/templates/chocolates/add_chocolate.html
+++ b/chocolates/templates/chocolates/add_chocolate.html
@@ -13,7 +13,7 @@
 <div class="overlay"></div>
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-6 mt-5">
+        <div class="col-12 col-md-6 mt-5 mb-5">
             <h2 class="purple-text mb-4">Chocolate Management</h2>
             <h5 class="bright-purple-text">Add a Chocolate!</h5>
         </div>
