--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -25,7 +25,7 @@
     <!-- First row contains page title and selected categories, from chocolates.html  -->
     <div class="row">
         <div class="col text-center mt-2 purple-text">
-            <h2>Chocolates</h2>
+            <h2>Chocolate Menu</h2>
 
             {% for c in current_categories %}
             <a class="category-badge text-decoration-none" href="{% url 'chocolates' %}?choc_category_display={{ c.choc_category_name }}">
@@ -145,7 +145,7 @@
                                     <small class="text-muted"><i
                                             class="fas fa-star mr-1 text-warning"></i>{{ chocolate.choc_rating }} / 5</small>
                                     {% else %}
-                                    <small class="text-muted">No Rating</small>
+                                    <small class="text-muted mb-5">No Rating</small>
                                     {% endif %}
 
 
