--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,51 +18,50 @@
 
 <div class="container">
 
-    <div class="row">
+    <div class="row mt-5 mb-5 purple-text">
         <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4">My Profile</h2>
-            <hr>
+            <h2>My Profile</h2>
+            <p class="bright-purple-text">On this page, you can update your default delivery details and review your order history.<br>Make yourself at home!</p>
         </div>
     </div>
 
     <div class="row">
 
-        <div class="col-12 col-lg-6">
-            <p class="text-muted">
+        <div class="col-12 col-lg-6 mb-5">
+            <p class="purple-text font-weight-bold">
                 Default Delivery Information
             </p>
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                <button class="update-choc-mgmt float-left">Update Information</button>
             </form>
         </div>
 
         <div class="col-12 col-lg-6">
 
             <!-- Order history -->
-            <p class="text-muted">Order History</p>
+            <p class="purple-text font-weight-bold">Order History</p>
 
             <!-- Responsive table -->
-            <div class="order-history table-responsive">
-                <table class="table table-sm table-borderless">
-                    <thead>
-                        <tr>
-                            <th>Order Number</th>
+            <div class="order-history table-responsive table-borderless">
+                <table class="table table-sm">
+                    <thead">
+                        <tr class="bright-purple-text">
+                            <th>Order</th>
                             <th>Date</th>
                             <th>Items</th>
-                            <th>Order Total</th>
+                            <th>Total</th>
                         </tr>
                     </thead>
                     <tbody>
                         <!-- Loops through each orders from profile view, generates a row for each one -->
                         {% for order in orders %}
-                        <tr>
+                        <tr class="order-history-row purple-text">
                             <td>
                                 <!-- Links back to order history -->
-                                <a href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
-                                    {{ order.order_number|truncatechars:10 }}
+                                <a class="bright-purple-text" href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
+                                    {{ order.order_number|truncatechars:5 }}
                                 </a>
                             </td>
 
@@ -81,9 +80,10 @@
                             </td>
 
                             <!-- Grand total -->
-                            <td>${{ order.grand_total }}</td>
+                            <td><strong>€{{ order.grand_total }}</strong></td>
                         </tr>
                         {% endfor %}
+                        
                     </tbody>
                 </table>
             </div>
