Add styling for checkout buttons on cart.html

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -22,10 +22,9 @@
 <div class="container mb-2">
 
     <!-- Shopping bag heading -->
-    <div class="row mt-5">
+    <div class="row mt-4">
         <div class="col">
-            <hr>
-            <h2 class="purple-text mt-5 mb-5 text-center">
+            <h2 class="purple-text mb-5 text-center">
                 What's in your cart..
             </h2>
         </div>
