--- a/cart/templates/cart/checkout_buttons.html
+++ b/cart/templates/cart/checkout_buttons.html
@@ -1,11 +1,11 @@
 <!-- This row renders the checkout link -->
-<a href="{% url 'chocolates' %}" class="btn btn-outline-black rounded-0 btn-lg">
+<a href="{% url 'chocolates' %}" class="btn cart-keep-shopping-button">
     <span class="icon">
         <i class="fas fa-chevron-left"></i>
     </span>
     <span class="text-uppercase">Keep Shopping</span>
 </a>
-<a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
+<a href="{% url 'checkout' %}" class="btn cart-checkout-button">
     <span class="text-uppercase">Secure Checkout</span>
     <span class="icon">
         <i class="fas fa-lock"></i>
